--- a/prework/week4DomExercise.html
+++ b/prework/week4DomExercise.html
@@ -50,29 +50,51 @@ For this exercise, don't change the HTML code given.
 
 // Exercise 1: Select the element with id "id2" and change the text inside it to "Here's some new text"
 
-
+document.getElementById("id2").innerHTML = "Here's some new text";
 // Exercise 2: Select the element with id "id1" and make the text inside it green.
 
-
+document.getElementById("id1").style.color = "green";
 // Exercise 3: Select the elements that have the class "myClass". console.log the output.
 
+const ouput = document.getElementsByClassName("myClass");
+console.log(ouput);
 
+for(let i = 0; i < ouput.length; i++) {
+	console.log(ouput[i].innerHTML);
+}
 // Exercise 4: Select the children of the element with id "id1". console.log the output.
 
+const childrenElements = document.getElementById("id1").children;
+console.log(childrenElements);
+for(let i = 0; i < childrenElements.length; i++) {
+	console.log(childrenElements[i].innerHTML);
+}
 
 // Exercise 5: Select all list items on the page. console.log the output.
+
+const listItems = document.getElementsByTagName("li");
+console.log(listItems);
+for(let i = 0; i < listItems.length; i++) {
+	console.log(listItems[i].innerHTML);
+}
 
 
 // Exercise 6: Use JavaScript to find the *number* of list items on the page. console.log the output.
 
+const numberOfListItems = listItems.length;
+console.log(numberOfListItems);
 
 // Exercise 7: Using JavaScript, create a list item and add it to the end of the ordered list.
-
-
+let newItem = document.createElement("li");
+let content = document.createTextNode("Antelope");
+newItem.appendChild(content);
+document.getElementById("ol1").appendChild(newItem);
 // Exercise 8: Using JavaScript, make it so that when button1 is clicked, 
 // an alert pops up saying "Hi from Techtonica".
 
-
+document.getElementById("button1").onclick = function() {
+	alert("Hi from Techtonica.");
+}
 // Exercise 9: In your own words, write a few sentences explaining what the DOM is. Write your answer in a comment below:
 //
 
