Added notes on DOM

--- a/prework/week4DomExercise.html
+++ b/prework/week4DomExercise.html
@@ -96,7 +96,10 @@ document.getElementById("button1").onclick = function() {
 	alert("Hi from Techtonica.");
 }
 // Exercise 9: In your own words, write a few sentences explaining what the DOM is. Write your answer in a comment below:
-//
+/*DOM - Document Object Model is the object oreinted representation of a Webpage.
+It can be modified using a scripting language like javascript.
+It is the programming interface for HTML and XML documents
+*/
 
 
 // The next two exercises combine the DOM with other JavaScript you've learned. Try them for an extra challenge!
